--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_CONNECT_URI=mongodb+srv://tgct:GnHEDCJ0fCNrvvlo@blogapp-db.9lepv.mongodb.net/blogapp-db?retryWrites=true&w=majority&appName=blogapp-db
+MONGODB_CONNECT_URI=mongodb+srv://tgct:<password>@blogapp-db.9lepv.mongodb.net/blogapp-db?retryWrites=true&w=majority&appName=blogapp-db
